refactor: replace Apache Configuration2 with Jackson for configuration handling