@@ -1,26 +1,3 @@
-package io.github.liana.config;
-
-import io.github.liana.util.ImmutableConfigMap;
-import io.github.liana.util.ImmutableConfigSet;
-
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.logging.Logger;
-import java.util.stream.Collectors;
-
-import static io.github.liana.config.ConfigDefaults.BASE_RESOURCE_NAME;
-import static io.github.liana.config.ConfigDefaults.BASE_RESOURCE_NAME_PATTERN;
-import static io.github.liana.config.ConfigDefaults.PROFILE_ENV_VAR;
-import static io.github.liana.config.ConfigDefaults.PROFILE_VAR;
-import static io.github.liana.config.ConfigDefaults.PROVIDER;
-import static io.github.liana.util.PlaceholderUtils.replaceIfAllPresent;
-import static io.github.liana.util.StringUtils.DOT;
-import static io.github.liana.util.StringUtils.EMPTY_STRING;
-import static io.github.liana.util.StringUtils.defaultIfBlank;
-import static java.util.Objects.requireNonNull;
-import static java.util.Objects.requireNonNullElse;
-
 /**
  * Copyright 2025 Leonardo Favio Romero Silva
  * <p>
@@ -30,102 +7,176 @@ import static java.util.Objects.requireNonNullElse;
  * <p>
  * <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache-2.0</a>
  */
+package io.github.liana.config;
+
+import io.github.liana.internal.ImmutableConfigMap;
+import io.github.liana.internal.ImmutableConfigSet;
+
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
+import static io.github.liana.config.ConfigDefaults.BASE_RESOURCE_NAME;
+import static io.github.liana.config.ConfigDefaults.BASE_RESOURCE_NAME_PATTERN;
+import static io.github.liana.config.ConfigDefaults.DEFAULT_PROFILE;
+import static io.github.liana.config.ConfigDefaults.PROFILE_ENV_VAR;
+import static io.github.liana.config.ConfigDefaults.PROFILE_VAR;
+import static io.github.liana.config.ConfigDefaults.PROVIDER;
+import static io.github.liana.internal.PlaceholderUtils.replaceIfAllPresent;
+import static io.github.liana.internal.StringUtils.defaultIfBlank;
+import static java.util.Objects.requireNonNull;
+import static java.util.Objects.requireNonNullElse;
+
+/**
+ * Responsible for preparing a list of configuration resources based on a given {@link ConfigResourceLocation}.
+ * <p>
+ * This class resolves configuration files depending on the provider, profile, variables, and resource names.
+ * It supports resolving default or custom resources using placeholders and environment-based profiles.
+ * </p>
+ * <p>
+ * Variable substitution is applied only if the resource name contains placeholders.
+ * If no placeholders are found in the resource name, the name is returned as-is without modification.
+ * </p>
+ */
 class ConfigResourcePreparer {
-    private static final Logger LOGGER = Logger.getLogger(ConfigResourcePreparer.class.getName());
-    private final ConfigResourceLocation configResourceLocation;
+    private final ConfigLogger log;
+    private final ConfigResourceLocation location;
     private final String profile;
 
-    public ConfigResourcePreparer(ConfigResourceLocation configResourceLocation) {
-        this(configResourceLocation, System.getenv(PROFILE_ENV_VAR));
+    /**
+     * Constructs a {@code ConfigResourcePreparer} using the given location and the profile from the environment variable.
+     *
+     * @param location the config resource location to resolve
+     */
+    public ConfigResourcePreparer(ConfigResourceLocation location) {
+        this(location, System.getenv(PROFILE_ENV_VAR));
     }
 
-    public ConfigResourcePreparer(ConfigResourceLocation configResourceLocation, String profile) {
-        this.configResourceLocation = requireNonNull(configResourceLocation, ConfigResourceLocation.class.getSimpleName() + " must not be null");
-        this.profile = defaultIfBlank(profile, "default");
+    /**
+     * Constructs a {@code ConfigResourcePreparer} using the given location and profile.
+     *
+     * @param location the config resource location to resolve
+     * @param profile  the profile name to use for resolving default resources
+     */
+    public ConfigResourcePreparer(ConfigResourceLocation location, String profile) {
+        this.location = requireNonNull(location, "ConfigResourceLocation must not be null");
+        this.profile = defaultIfBlank(profile, DEFAULT_PROFILE);
+        log = ConsoleConfigLogger.getLogger();
     }
 
-    public List<ResolvedConfigResource> prepare() {
-        String preparedProvider = prepareProvider();
-        boolean isDefaultProvider = preparedProvider.equalsIgnoreCase(PROVIDER);
-        ImmutableConfigMap preparedVariables = prepareVariables(isDefaultProvider);
-        List<String> preparedResourceNames = prepareResourceNames(isDefaultProvider, preparedVariables);
-        ImmutableConfigMap preparedCredentials = prepareCredentials(isDefaultProvider);
+    /**
+     * Prepares a list of resolved configuration resources based on the location and profile.
+     * It determines the appropriate provider, variables, resource names, and credentials to construct the list.
+     *
+     * @return a list of {@link ConfigResourceReference} that are ready for use
+     */
+    public List<ConfigResourceReference> prepare() {
+        final String provider = defaultIfBlank(location.getProvider(), PROVIDER);
+        final boolean isDefaultProvider = provider.equalsIgnoreCase(PROVIDER);
+        final ImmutableConfigMap variables = prepareVariables(isDefaultProvider);
+        final List<String> resourceNames = prepareResourceNames(isDefaultProvider, variables);
+        final ImmutableConfigMap credentials = requireNonNullElse(location.getCredentials(), ImmutableConfigMap.empty());
 
-        return preparedResourceNames.stream()
-                .map(name -> new ResolvedConfigResource(preparedProvider, name, preparedCredentials))
-                .collect(Collectors.toList());
+        return resourceNames.stream()
+                .map(resourceName -> new ConfigResourceReference(provider, resourceName, credentials))
+                .collect(Collectors.toUnmodifiableList());
     }
 
-    private String prepareProvider() {
-        String providedProvider = requireNonNullElse(configResourceLocation.getProvider(), EMPTY_STRING);
-
-        return providedProvider.isBlank() ? PROVIDER : providedProvider;
-    }
-
+    /**
+     * Prepares the variable map used for placeholder replacement in resource names.
+     * If using the default provider and no variables are present, a default profile variable is injected.
+     *
+     * @param isDefaultProvider whether the provider is the default one
+     * @return an {@link ImmutableConfigMap} of variables
+     */
     private ImmutableConfigMap prepareVariables(boolean isDefaultProvider) {
-        ImmutableConfigMap providedVariables = requireNonNullElse(configResourceLocation.getVariables(), ImmutableConfigMap.empty());
+        ImmutableConfigMap variables = requireNonNullElse(location.getVariables(), ImmutableConfigMap.empty());
 
-        if (isDefaultProvider && providedVariables.isEmpty()) {
+        if (isDefaultProvider && variables.isEmpty()) {
             return ImmutableConfigMap.of(Map.of(PROFILE_VAR, profile));
         }
 
-        return providedVariables;
+        return variables;
     }
 
-    private List<String> prepareResourceNames(boolean isDefaultProvider, ImmutableConfigMap immutableConfigMap) {
-        ImmutableConfigSet providedResourceNames = requireNonNullElse(configResourceLocation.getResourceNames(), ImmutableConfigSet.empty());
-
-        Map<String, String> variables = immutableConfigMap.toMap();
+    /**
+     * Resolves the resource names based on the provider type and variables.
+     * Falls back to default resolution logic if no resource names are provided.
+     *
+     * @param isDefaultProvider whether the provider is the default one
+     * @param variables         the variables used for placeholder substitution
+     * @return a list of resolved resource names
+     */
+    private List<String> prepareResourceNames(boolean isDefaultProvider, ImmutableConfigMap variables) {
+        ImmutableConfigSet providedResourceNames = requireNonNullElse(location.getResourceNames(), ImmutableConfigSet.empty());
+        Map<String, String> variableMap = variables.toMap();
         if (isDefaultProvider && providedResourceNames.isEmpty()) {
-            return processDefaultResourceNames(variables);
+            return resolveDefaultResources(variableMap);
         }
 
-        return processProvidedResourceNames(providedResourceNames, variables);
+        return resolveCustomResources(providedResourceNames, variableMap);
     }
 
-    private List<String> processDefaultResourceNames(Map<String, String> variables) {
-        String processedDefaultName = resolveExtension(BASE_RESOURCE_NAME)
-                .filter(FilenameValidator::isSafeResourceName)
-                .orElse(EMPTY_STRING);
+    /**
+     * Resolves default resource names using variable substitution when applicable.
+     * <p>
+     * If the base pattern includes placeholders and all required variables are available,
+     * the name is resolved accordingly; otherwise, only static names are used.
+     * </p>
+     *
+     * @param variableMap the map of variables for placeholder resolution
+     * @return a list of valid and safe resource names found in the classpath
+     */
+    private List<String> resolveDefaultResources(Map<String, String> variableMap) {
+        List<String> processedNames = new ArrayList<>();
 
-        String processedPattern = replaceIfAllPresent(BASE_RESOURCE_NAME_PATTERN, variables)
-                .flatMap(this::resolveExtension)
+        findConfigResource(BASE_RESOURCE_NAME)
                 .filter(FilenameValidator::isSafeResourceName)
-                .orElse(EMPTY_STRING);
+                .ifPresent(processedNames::add);
 
-        return List.of(processedDefaultName, processedPattern);
+        replaceIfAllPresent(BASE_RESOURCE_NAME_PATTERN, variableMap)
+                .flatMap(this::findConfigResource)
+                .filter(FilenameValidator::isSafeResourceName)
+                .ifPresent(processedNames::add);
+
+        return Collections.unmodifiableList(processedNames);
     }
 
-    private List<String> processProvidedResourceNames(ImmutableConfigSet resourceNames, Map<String, String> variables) {
+    /**
+     * Resolves custom resource names from the given set, applying variable substitution only if placeholders are present.
+     * <p>
+     * Resource names without placeholders are returned as-is.
+     * </p>
+     *
+     * @param resourceNames the set of custom resource names
+     * @param variableMap   the map of variables for substitution
+     * @return a list of valid and safe resource names
+     */
+    private List<String> resolveCustomResources(ImmutableConfigSet resourceNames, Map<String, String> variableMap) {
         return resourceNames.toSet().stream()
-                .map(name -> replaceIfAllPresent(name, variables))
+                .map(name -> replaceIfAllPresent(name, variableMap))
                 .flatMap(Optional::stream)
                 .filter(FilenameValidator::isSafeResourceName)
                 .collect(Collectors.toUnmodifiableList());
     }
 
-    private Optional<String> resolveExtension(String baseResourceName) {
+    /**
+     * Attempts to find an existing configuration resource in the classpath with supported file extensions.
+     *
+     * @param baseResourceName the base name of the resource (without extension)
+     * @return an {@link Optional} containing the full resource name if found
+     */
+    private Optional<String> findConfigResource(String baseResourceName) {
         return ConfigFileFormat.getAllSupportedExtensions().stream()
-                .map(extension -> formatResourceName(baseResourceName, extension))
+                .map(extension -> baseResourceName + "." + extension)
                 .filter(ClasspathResource::resourceExists)
                 .findFirst()
                 .or(() -> {
-                    LOGGER.warning("No standard config file found in classpath for base: " + baseResourceName);
+                    log.warn(() -> "No standard config file found in classpath for base: " + baseResourceName);
                     return Optional.empty();
                 });
-    }
-
-    private String formatResourceName(String baseResourceName, String extension) {
-        return baseResourceName + DOT + extension;
-    }
-
-    private ImmutableConfigMap prepareCredentials(boolean isDefaultProvider) {
-        ImmutableConfigMap providedCredentials = requireNonNullElse(configResourceLocation.getCredentials(), ImmutableConfigMap.empty());
-
-        if (isDefaultProvider && providedCredentials.isEmpty()) {
-            return ImmutableConfigMap.empty();
-        }
-
-        return providedCredentials;
     }
 }
